# HighBarV2

./: .gitignore  CLAUDE.md  README.md  pack-dev.sh
.claude/commands/: kill.md  mergeBranches.md
.specify/memory/: constitution.md
Mailbox/: 2026-04-12_FSBarV1_trainer_session_findings.md  2026-04-12_from_HighBarV2_contract-docs-response.md  2026-04-12_to_FSBarV1_proxy_fixes_complete.md  2026-04-12_to_HighBarV2_proxy-contract-refinements.md  2026-04-14_from_FSBarV1_mid-game-callback-event-drop.md  2026-04-14_to_FSBarV1_callback-event-drop-resolved.md  2026-04-19_from_FSBarV1_scripting-commands-silently-dropped.md  2026-04-19_to_FSBarV1_command-execute-negative-result.md  2026-04-19_to_FSBarV1_dispatch-research-internal-order-removed.md  2026-04-19_to_FSBarV1_scripting-dispatch-fixed.md
clients/fsharp/: HighBar.Client.fsproj
clients/python/: pyproject.toml
clients/python/highbar/: __init__.py  client.py  commands.py  events.py
data/bar/: BarData.fsproj
data/bar-v1/: BarData.fsproj
data/bar-v1.tests/: BarData.Tests.fsproj
data/bar.tests/: BarData.Tests.fsproj
docs/: architecture.md  bar-data-reference.md  bar-info.md  client-api.md  configuration.md  game-data.md  getting-started.md  index.md  known-issues.md  protocol.md  proxy-reference.md  testing.md  tools.md
docs/research/: 01-recoil-engine-ai-interface.md  02-highbar-v1-analysis.md  03-bar-ai-ecosystem.md  04-protobuf-ipc-patterns.md  05-architecture-spec.md  06-protobuf-schema-design.md  07-implementation-roadmap.md  README.md
proto/: buf.gen.yaml  buf.yaml
proto/highbar/: callbacks.proto  commands.proto  common.proto  events.proto  messages.proto
proxy/: CMakeLists.txt
proxy/data/: AIInfo.lua  AIOptions.lua
proxy/include/highbar/: arena.h  callbacks.h  config.h  connection.h  deserialize.h  engine_types.h  proxy.h  serialize.h
proxy/scripts/: deploy-proxy.sh
proxy/src/: arena.c  callbacks.c  config.c  connection.c  deserialize.c  proxy.c  serialize.c
proxy/tests/: mock_engine.c  mock_engine.h  test_callbacks.c  test_deserialize.c  test_gamestate_snapshot.c  test_roundtrip.c  test_serialize.c
reports/: 001-harness-setup.md  002-connection-tests.md  003-event-delivery.md  004-command-execution.md  005-callback-queries.md  006-python-tests.md  007-test-suite-overview.md  008-bar-headless-mode.md  009-live-engine-integration.md  010-remaining-test-failures.md  011-test-fix-results.md  012-harden-persistent-tests.md  013-diagnose-fix-test-gaps.md  014-live-game-ai-installation.md  015-fix-unit-commands-root-cause.md  016-visual-game-test-validated.md  017-fix-client-socket-hang.md  README.md  TEMPLATE.md
scripts/: install-ai.sh  patch-chobby-ai.py  patch-chobby-ai.sh
specs/001-native-proxy-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-headless-test-suite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tools-prereqs-test-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-report.md
specs/004-live-headless-testsuite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-test-failures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-typed-bar-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: README.md  check-prerequisites.sh  engine-version.json  run-all.sh  setup-engine.sh
tools/: generate-bar-data-flat.fsx  generate-bar-data.fsx
(+557 files in other folders)
